<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>argus_command_bridge</name>
  <version>0.0.0</version>
  <description>Argus Command Bridge is a lightweight ROS 2 package that provides a secure gateway for tele-operating Argus Bot from anywhere.</description>
  <maintainer email="gabe.susman@gmail.com">Gabe Susman</maintainer>
  <license>Apache License 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
